refactor - booking button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a class="logo" href="index.html"><img src="system/images/logo.png" width="240px" height="48px" alt="logo"></a>
         <nav>
             <ul>
-                <li class="nav-book"><a href="contact.php">Book</a></li>
+                <li class="nav-book"><a href="https://web.whatsapp.com/send?phone=557133888999&text=Oi%2C+encontrei+o+site+de+voc%C3%AAs+e+gostaria+de+fazer+uma+reserva%21" target="_blank">RESERVE AGORA</a></li>
                 <li><a href="index.html">Home</a>
                 </li>
                 <li class="drop"><a href="#salvador">Salvador</a>
@@ -45,7 +45,7 @@
             </ul>
         </nav>
         <div id="mobilenav"><i class="icon ion-navicon"></i></div>
-        <a class="button book-button" href="contact.php">Book</a>
+        <a class="button book-button" href="https://web.whatsapp.com/send?phone=557133888999&text=Oi%2C+encontrei+o+site+de+voc%C3%AAs+e+gostaria+de+fazer+uma+reserva%21" target="_blank">RESERVE AGORA</a>
         <div class="header-social">
             <a href="https://web.whatsapp.com/send?phone=557133888999&text=Oi%2C+encontrei+o+site+de+voc%C3%AAs+e+gostaria+de+fazer+uma+reserva%21" target="_blank"><i class="icon ion-social-whatsapp" style="color:#25d366"></i></a>
             <a href="https://www.instagram.com/klayemorrison/" target="_blank"><i class="icon ion-social-instagram-outline"></i></a>
