--- a/index.html
+++ b/index.html
@@ -404,10 +404,8 @@
 
       <!-- ******************** Footer | END ******************** -->
     </div>
-    <!-- If plugins.js is a separate script that is not bundled -->
     <script src="system/plugins.js"></script>
 
-    <!-- The bundled JavaScript file that includes all your application logic -->
-    <script src="dist/bundle.js"></script>
+    <script type="module" src="dist/bundle.js"></script>
   </body>
 </html>
